# binpkg

./: .gitignore  .uncrustify.cfg  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
.uncrustify/: pre-commit-uncrustify.cfg  pre-commit.cfg
src/: CMakeLists.txt  binpkg.cpp  binpkg.h  main.cpp
test/: CMakeLists.txt  test.cpp  test_feature_x.cpp  test_feature_y_1.cpp  test_feature_y_2.cpp
